Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -268,7 +268,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget .extendednavigation {
-    text-align: left;
     position: relative;
     background-color: @color-swatch7;
     float: none;
@@ -276,10 +275,9 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget .extendednavigation ul {
-    display: table;
     margin: 0 auto;
     padding: 0;
-    float: none;
+    display: block;
 }
 
 .widget.extendednavigation a.pull {
